--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Second Site</title>
-    <link rel="stylesheet" href="styles/styles.css">
+    <link rel="stylesheet" href="styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Merriweather&family=Montserrat&family=Sacramento&display=swap" rel="stylesheet">
@@ -14,14 +14,14 @@
     <div class="top-container">
     <h1>I'm Parth.</h1>
    <h2> a <u>pro</u>grammer.</h2>
-   <img class="top-cloud" src="resources/cloud.png" alt="cloud">
-   <img class="mountain" src="resources/mountain.png" alt="mountain">
-   <img class="bottom-cloud" src="resources/cloud.png" alt="cloud">
-   <img class="sun" src="resources/sun.png" alt="">
+   <img class="top-cloud" src="cloud.png" alt="cloud">
+   <img class="mountain" src="mountain.png" alt="mountain">
+   <img class="bottom-cloud" src="cloud.png" alt="cloud">
+   <img class="sun" src="sun.png" alt="">
 </div>
 <div class="middle-container">
     <div class="profile">
-      <img src="resources/profile.jpg" alt="">
+      <img src="profile.jpg" alt="">
       <h2>Hello.</h2>
       <p class="bio">I'm a Professional Full Stack Web Developer and Expertise in Digital Marketing. <br> I love coding and learning new skills time to time.</p>
     </div>
@@ -30,12 +30,12 @@
       <h2>My Skills.</h2>
       
       <div class="skill-row">
-        <img class="code" src="resources/code.png" alt="">
+        <img class="code" src="code.png" alt="">
         <h3>Full Stack Web Development</h3>
         <p class="dev-description">I fell in love with design and development since I made my first website from Scratch. By now I have gained a wealth of experience designing and developing web applications.</p>
       </div>
       <div class="skill-row">
-        <img class="marketing" src="resources/social-media.png" alt="">
+        <img class="marketing" src="social-media.png" alt="">
         <h3>Digital Marketing & Sales</h3>
         <p>Virality and Optimizing the Quality of content with Precise Audience Targeting is my field of Expertise in Marketing. Closing the deals in less than half an expected price is another small deal for me.</p>
       </div>
